Fix header overlap;

--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,7 @@ body {
   width: 50%;
   max-width: 500px;
   position: sticky;
-  top: 20px;
+  top: 60px;
 }
 
 button {
